--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "resend": "^3.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "zod": "^3.22.4"
   },
