--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.2",
     "@studio-freight/react-lenis": "^0.0.47",
+    "@types/mdx": "^2.0.13",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
     "next": "14.1.4",
