--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/mdx": "^2.0.13",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.25",
+    "nanoid": "^5.0.7",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
